--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
 
-    <title>Hello, world!</title>
+    <title>Dark Mode v2</title>
   </head>
   <body>
     <input type="checkbox" class="checkbox" name="" id="checkbox" />
